# cellular-automaton-rust

./: .gitignore  Cargo.toml  README.md  build.sh  package.json
.github/workflows/: deploy.yml
front/: index.html
public/: index.html
src/: cells.rs  main.rs  ui.rs
