[package]
name = "cellular-automaton-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", optional = true }
bevy_pancam = "0.10.0"
noise = "0.8.2"
rand = "0.8.5"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[features]
default = ["bevy"]
dev = ["bevy/dynamic_linking"]
prod = ["bevy"]